hphp/hack/test/typecheck/sealed/trait2.php.exp
File "trait2.php", line 14, characters 13-13:
You cannot implement sealed interface A (Typing[4238])
File "trait2.php", line 5, characters 11-11:
Declaration is here
